# secret-santa

./: README.md  pyproject.toml
secret_santa/: example.json  secret_santa.py  test_secret_santa.py
